Expand JPMS opens/exports and allow Mockito temp agent jars in sandbox